--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,28 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-14 Sat 22:20]
+#+CAPTION: Clock summary at [2017-10-14 Sat 22:38]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *31:18* |       |      | 100.0 |
+| *Total time*                                                                | *31:35* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 31:18   |       |      | 100.0 |
-| Active                                                                      |         | 31:18 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.4 |
+| Stories                                                                     | 31:35   |       |      | 100.0 |
+| Active                                                                      |         | 31:35 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.4 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.5 |
 | COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   3.2 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   6.5 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   5.0 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   6.4 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   4.9 |
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.0 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.7 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.6 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.5 |
 | COMPLETED Rename kernel and family                                          |         |       | 2:44 |   8.7 |
 | COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.2 |
-| STARTED Create the archetype location properties                            |         |       | 9:29 |  30.3 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  20.7 |
-| STARTED Caching in travis                                                   |         |       | 0:34 |   1.8 |
+| STARTED Create the archetype location properties                            |         |       | 9:29 |  30.0 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  20.5 |
+| STARTED Caching in travis                                                   |         |       | 0:51 |   2.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -765,6 +765,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Caching in travis                                         :story:
+    CLOCK: [2017-10-14 Sat 22:20]--[2017-10-14 Sat 22:37] =>  0:17
     CLOCK: [2017-10-14 Sat 21:45]--[2017-10-14 Sat 22:19] =>  0:34
 
 It seems it is possible to cache in travis. We should try to enable it
@@ -777,6 +778,8 @@ Links:
 - [[https://docs.travis-ci.com/user/caching/][Caching Dependencies and Directories]]
 - [[https://ccache.samba.org/][CCache]]
 - [[https://crascit.com/2016/04/09/using-ccache-with-cmake/][Using ccache with CMake]]
+- [[https://github.com/perl11/potion/issues/41][clang: error: argument unused during compilation: '-I core']]
+- [[https://bugzilla.samba.org/show_bug.cgi?id%3D8118][Bug 8118 - don't pass -D, -I, -U to compiler]]
 
 *** Properties vs configuration                                       :story:
 
