--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-14 Sat 22:38]
+#+CAPTION: Clock summary at [2017-10-15 Sun 07:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *31:35* |       |      | 100.0 |
+| *Total time*                                                                | *31:43* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 31:35   |       |      | 100.0 |
-| Active                                                                      |         | 31:35 |      | 100.0 |
+| Stories                                                                     | 31:43   |       |      | 100.0 |
+| Active                                                                      |         | 31:43 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.4 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.5 |
@@ -30,11 +30,11 @@
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.0 |
 | COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.6 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.5 |
-| COMPLETED Rename kernel and family                                          |         |       | 2:44 |   8.7 |
+| COMPLETED Rename kernel and family                                          |         |       | 2:44 |   8.6 |
 | COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.2 |
-| STARTED Create the archetype location properties                            |         |       | 9:29 |  30.0 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  20.5 |
-| STARTED Caching in travis                                                   |         |       | 0:51 |   2.7 |
+| STARTED Create the archetype location properties                            |         |       | 9:29 |  29.9 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  20.4 |
+| COMPLETED Caching in travis                                                 |         |       | 0:59 |   3.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -764,7 +764,9 @@ We should check that =enable_unique_file_names= is set to true.
 
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
-*** STARTED Caching in travis                                         :story:
+*** COMPLETED Caching in travis                                       :story:
+    CLOSED: [2017-10-15 Sun 07:49]
+    CLOCK: [2017-10-15 Sun 07:41]--[2017-10-15 Sun 07:49] =>  0:08
     CLOCK: [2017-10-14 Sat 22:20]--[2017-10-14 Sat 22:37] =>  0:17
     CLOCK: [2017-10-14 Sat 21:45]--[2017-10-14 Sat 22:19] =>  0:34
 
