--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-15 Sun 18:44]
+#+CAPTION: Clock summary at [2017-10-15 Sun 18:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *32:47* |       |      | 100.0 |
+| *Total time*                                                                | *32:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 32:47   |       |      | 100.0 |
-| Active                                                                      |         | 32:47 |      | 100.0 |
+| Stories                                                                     | 32:51   |       |      | 100.0 |
+| Active                                                                      |         | 32:51 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.3 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.5 |
@@ -28,14 +28,14 @@
 | COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   6.2 |
 | COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   4.7 |
 | COMPLETED Clean-up context usage                                            |         |       | 0:38 |   1.9 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.4 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.3 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.5 |
 | COMPLETED Rename kernel and family                                          |         |       | 2:44 |   8.3 |
-| COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.1 |
+| COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.0 |
 | COMPLETED Caching in travis                                                 |         |       | 0:59 |   3.0 |
-| COMPLETED Consider collapsing element properties into element               |         |       | 1:04 |   3.3 |
+| COMPLETED Consider collapsing element properties into element               |         |       | 1:08 |   3.5 |
 | STARTED Create the archetype location properties                            |         |       | 9:29 |  28.9 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  19.8 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  19.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -418,6 +418,7 @@ Links:
 
 *** COMPLETED Consider collapsing element properties into element     :story:
     CLOSED: [2017-10-15 Sun 18:44]
+    CLOCK: [2017-10-15 Sun 18:45]--[2017-10-15 Sun 18:49] =>  0:04
     CLOCK: [2017-10-15 Sun 18:24]--[2017-10-15 Sun 18:44] =>  0:20
     CLOCK: [2017-10-15 Sun 17:39]--[2017-10-15 Sun 18:23] =>  0:44
 
