--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-15 Sun 18:49]
-| <75>                                                                        |         |       |      |       |
-| Headline                                                                    | Time    |       |      |     % |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *32:51* |       |      | 100.0 |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 32:51   |       |      | 100.0 |
-| Active                                                                      |         | 32:51 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   7.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.3 |
-| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.5 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   3.1 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   6.2 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   4.7 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   1.9 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   6.3 |
-| COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.5 |
-| COMPLETED Rename kernel and family                                          |         |       | 2:44 |   8.3 |
-| COMPLETED Clean up formatter names                                          |         |       | 1:00 |   3.0 |
-| COMPLETED Caching in travis                                                 |         |       | 0:59 |   3.0 |
-| COMPLETED Consider collapsing element properties into element               |         |       | 1:08 |   3.5 |
-| STARTED Create the archetype location properties                            |         |       | 9:29 |  28.9 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  19.7 |
+#+CAPTION: Clock summary at [2017-10-15 Sun 19:19]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *33:35* |       |       | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 33:35   |       |       | 100.0 |
+| Active                                                                      |         | 33:35 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   2.2 |
+| CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.5 |
+| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   3.0 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   6.1 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.6 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.9 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   6.2 |
+| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.4 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   8.1 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   3.0 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.9 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   3.4 |
+| STARTED Create the archetype location properties                            |         |       | 10:13 |  30.4 |
+| STARTED Generate file paths as a transform                                  |         |       |  6:29 |  19.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -426,6 +426,8 @@ Do we really need element properties as a stand alone class? It seems
 all of its attributes should just be part of element.
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-10-15 Sun 18:45]--[2017-10-15 Sun 19:19] =>  0:34
+    CLOCK: [2017-10-15 Sun 17:28]--[2017-10-15 Sun 17:38] =>  0:10
     CLOCK: [2017-10-13 Fri 15:31]--[2017-10-13 Fri 15:50] =>  0:19
     CLOCK: [2017-10-13 Fri 14:16]--[2017-10-13 Fri 14:26] =>  0:10
     CLOCK: [2017-10-13 Fri 11:51]--[2017-10-13 Fri 13:45] =>  1:54
