--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-17 Tue 19:07]
+#+CAPTION: Clock summary at [2017-10-20 Fri 09:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:15* |       |       | 100.0 |
+| *Total time*                                                                | *36:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:15   |       |       | 100.0 |
-| Active                                                                      |         | 35:15 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.6 |
+| Stories                                                                     | 36:23   |       |       | 100.0 |
+| Active                                                                      |         | 36:23 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   2.1 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.5 |
-| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.9 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.8 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.4 |
-| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.8 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.9 |
-| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.4 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   7.8 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.8 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.8 |
-| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   3.2 |
-| STARTED Create the archetype location properties                            |         |       | 11:53 |  33.7 |
-| STARTED Generate file paths as a transform                                  |         |       |  6:29 |  18.4 |
+| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.8 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.6 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.3 |
+| COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.7 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.7 |
+| COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.3 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   7.5 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.7 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.7 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   3.1 |
+| STARTED Create the archetype location properties                            |         |       | 13:01 |  35.8 |
+| STARTED Generate file paths as a transform                                  |         |       |  6:29 |  17.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -426,6 +426,7 @@ Do we really need element properties as a stand alone class? It seems
 all of its attributes should just be part of element.
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-10-20 Fri 08:45]--[2017-10-20 Fri 09:53] =>  1:08
     CLOCK: [2017-10-17 Tue 19:00]--[2017-10-17 Tue 19:07] =>  0:07
     CLOCK: [2017-10-17 Tue 18:40]--[2017-10-17 Tue 18:59] =>  0:19
     CLOCK: [2017-10-17 Tue 18:18]--[2017-10-17 Tue 18:39] =>  0:21
