--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-20 Fri 10:55]
+#+CAPTION: Clock summary at [2017-10-20 Fri 11:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:20* |       |       | 100.0 |
+| *Total time*                                                                | *37:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:20   |       |       | 100.0 |
-| Active                                                                      |         | 37:20 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.2 |
+| Stories                                                                     | 37:56   |       |       | 100.0 |
+| Active                                                                      |         | 37:56 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   2.0 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.7 |
 | COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.4 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.2 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.1 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.7 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.6 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.5 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.3 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   7.3 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.7 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   7.2 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.6 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.6 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   3.0 |
-| STARTED Create the archetype location properties                            |         |       | 13:58 |  37.4 |
-| STARTED Generate file paths as a transform                                  |         |       |  6:29 |  17.4 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  36.8 |
+| STARTED Generate file paths as a transform                                  |         |       |  7:05 |  18.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -425,7 +425,8 @@ Links:
 Do we really need element properties as a stand alone class? It seems
 all of its attributes should just be part of element.
 
-*** STARTED Create the archetype location properties                  :story:
+*** COMPLETED Create the archetype location properties                :story:
+    CLOSED: [2017-10-20 Fri 11:00]
     CLOCK: [2017-10-20 Fri 10:51]--[2017-10-20 Fri 10:55] =>  0:04
     CLOCK: [2017-10-20 Fri 10:41]--[2017-10-20 Fri 10:50] =>  0:09
     CLOCK: [2017-10-20 Fri 10:35]--[2017-10-20 Fri 10:40] =>  0:05
@@ -489,6 +490,7 @@ Tasks:
 - add disable_facet_directories to locator properties?
 
 *** STARTED Generate file paths as a transform                        :story:
+    CLOCK: [2017-10-20 Fri 10:56]--[2017-10-20 Fri 11:32] =>  0:36
     CLOCK: [2017-09-22 Fri 09:41]--[2017-09-22 Fri 11:26] =>  1:45
     CLOCK: [2017-09-21 Thu 14:20]--[2017-09-21 Thu 14:55] =>  0:35
     CLOCK: [2017-09-21 Thu 12:21]--[2017-09-21 Thu 12:31] =>  0:10
@@ -805,6 +807,11 @@ different top-level directories), which is nice.
 We should check that =enable_unique_file_names= is set to true.
 
 Key: =quilt.cpp.flat_directory_mode.enabled=.
+
+*** Supply the yarn options to prober                                 :story:
+
+At present most of the arguments supplied to prober come from the
+options anyway - why not just supply the options to it?
 
 *** Consider bucketing elements by meta-type in model                 :story:
 
