--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,29 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-20 Fri 13:42]
+#+CAPTION: Clock summary at [2017-10-21 Sat 11:48]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:55* |       |       | 100.0 |
+| *Total time*                                                                | *40:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:55   |       |       | 100.0 |
-| Active                                                                      |         | 38:55 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   6.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:45 |   1.9 |
+| Stories                                                                     | 40:12   |       |       | 100.0 |
+| Active                                                                      |         | 40:12 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:05 |   2.7 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
-| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.6 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.2 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   4.0 |
+| COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.5 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.1 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.9 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.6 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.4 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.2 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.2 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   7.0 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.6 |
-| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.5 |
-| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.9 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  35.9 |
-| STARTED Generate file paths as a transform                                  |         |       |  8:04 |  20.7 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.8 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.5 |
+| COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.4 |
+| COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.8 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  34.7 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  22.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -191,6 +191,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-10-21 Sat 11:28]--[2017-10-21 Sat 11:48] =>  0:20
     CLOCK: [2017-10-05 Thu 07:08]--[2017-10-05 Thu 07:15] =>  0:07
     CLOCK: [2017-09-29 Fri 10:01]--[2017-09-29 Fri 10:25] =>  0:24
     CLOCK: [2017-09-18 Mon 21:32]--[2017-09-18 Mon 21:39] =>  0:07
@@ -490,6 +491,7 @@ Tasks:
 - add disable_facet_directories to locator properties?
 
 *** STARTED Generate file paths as a transform                        :story:
+    CLOCK: [2017-10-21 Sat 10:30]--[2017-10-21 Sat 11:27] =>  0:57
     CLOCK: [2017-10-20 Fri 13:05]--[2017-10-20 Fri 13:42] =>  0:37
     CLOCK: [2017-10-20 Fri 11:33]--[2017-10-20 Fri 11:55] =>  0:22
     CLOCK: [2017-10-20 Fri 10:56]--[2017-10-20 Fri 11:32] =>  0:36
