--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,29 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-21 Sat 11:48]
+#+CAPTION: Clock summary at [2017-10-21 Sat 12:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:12* |       |       | 100.0 |
+| *Total time*                                                                | *40:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:12   |       |       | 100.0 |
-| Active                                                                      |         | 40:12 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.8 |
+| Stories                                                                     | 40:44   |       |       | 100.0 |
+| Active                                                                      |         | 40:44 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   5.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:05 |   2.7 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.4 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.5 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.1 |
-| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.9 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   5.0 |
+| COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.8 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.6 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.2 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   5.1 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.2 |
-| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.8 |
+| COMPLETED Rename kernel and family                                          |         |       |  2:44 |   6.7 |
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.5 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.4 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.8 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  34.7 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  22.4 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  34.3 |
+| COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.3 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  22.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -489,6 +490,12 @@ Tasks:
 - update enablement to use the =archetype_location_properties= to
   populate its global and local caches.
 - add disable_facet_directories to locator properties?
+
+*** COMPLETED Analysis work on moving to c++ 17                       :story:
+    CLOSED: [2017-10-21 Sat 12:21]
+    CLOCK: [2017-10-21 Sat 11:49]--[2017-10-21 Sat 12:21] =>  0:32
+
+Have a quick go at bumping C++ standard version to 17 and see what breaks.
 
 *** STARTED Generate file paths as a transform                        :story:
     CLOCK: [2017-10-21 Sat 10:30]--[2017-10-21 Sat 11:27] =>  0:57
